<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.jupnp</groupId>
  <artifactId>jupnp</artifactId>
  <version>3.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>jUPnP</name>
  <description>UPnP/DLNA library for Java</description>
  <url>https://jupnp.org</url>

  <organization>
    <name>jUPnP.org</name>
    <url>https://www.jupnp.org</url>
  </organization>

  <licenses>
    <license>
      <name>CDDL 1.0</name>
      <url>https://opensource.org/licenses/CDDL-1.0</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>kaikreuzer</id>
      <name>Kai Kreuzer</name>
      <email>kai@openhab.org</email>
      <organization>jUPnP.org</organization>
      <organizationUrl>https://www.jupnp.org</organizationUrl>
    </developer>
  </developers>

  <modules>
    <module>bom</module>
    <module>bundles</module>
    <module>itests</module>
    <module>tools</module>
  </modules>

  <scm>
    <connection>scm:git:git@github.com:jupnp/jupnp.git</connection>
    <developerConnection>scm:git:git@github.com:jupnp/jupnp.git</developerConnection>
    <url>git@github.com:jupnp/jupnp.git</url>
  </scm>

  <issueManagement>
    <system>github</system>
    <url>https://github.com/jupnp/jupnp/issues</url>
  </issueManagement>
  <distributionManagement>
    <repository>
      <uniqueVersion>false</uniqueVersion>
      <id>maven</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>11</maven.compiler.release>

    <args4j.version>2.0.12</args4j.version>
    <bnd.version>6.4.0</bnd.version>
    <jetty.version>9.4.52.v20230823</jetty.version>
    <junit.jupiter.version>5.10.0</junit.jupiter.version>
    <junit.platform.version>1.10.0</junit.platform.version>
    <logback.version>1.2.12</logback.version>
    <servlet.api.version>3.1.0</servlet.api.version>
    <slf4j.version>1.7.36</slf4j.version>
    <osgi.version>7.0.0</osgi.version>

    <basedirRoot>.</basedirRoot>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.jupnp.bom</groupId>
        <artifactId>org.jupnp.bom.compile</artifactId>
        <version>${project.version}</version>
        <type>pom</type>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.jupnp.bom</groupId>
        <artifactId>org.jupnp.bom.runtime</artifactId>
        <version>${project.version}</version>
        <type>pom</type>
        <scope>runtime</scope>
      </dependency>
      <dependency>
        <groupId>org.jupnp.bom</groupId>
        <artifactId>org.jupnp.bom.test</artifactId>
        <version>${project.version}</version>
        <type>pom</type>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>biz.aQute.bnd</groupId>
          <artifactId>bnd-indexer-maven-plugin</artifactId>
          <version>${bnd.version}</version>
        </plugin>
        <plugin>
          <groupId>biz.aQute.bnd</groupId>
          <artifactId>bnd-maven-plugin</artifactId>
          <version>${bnd.version}</version>
          <configuration>
            <bndfile>${basedirRoot}/bnd.bnd</bndfile>
          </configuration>
        </plugin>
        <plugin>
          <groupId>biz.aQute.bnd</groupId>
          <artifactId>bnd-resolver-maven-plugin</artifactId>
          <version>${bnd.version}</version>
        </plugin>
        <plugin>
          <groupId>biz.aQute.bnd</groupId>
          <artifactId>bnd-testing-maven-plugin</artifactId>
          <version>${bnd.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.6.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.11.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-gpg-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.6.0</version>
          <configuration>
            <doclint>none</doclint>
            <legacyMode>true</legacyMode>
            <outputDirectory>${project.build.directory}/javadoc</outputDirectory>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.1.2</version>
          <configuration>
            <redirectTestOutputToFile>true</redirectTestOutputToFile>
            <systemPropertyVariables>
              <junit.jupiter.execution.timeout.default>15 m</junit.jupiter.execution.timeout.default>
            </systemPropertyVariables>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>3.4.0</version>
        </plugin>
        <plugin>
          <groupId>org.commonjava.maven.plugins</groupId>
          <artifactId>directory-maven-plugin</artifactId>
          <version>1.0</version>
        </plugin>
        <plugin>
          <groupId>com.github.ekryd.sortpom</groupId>
          <artifactId>sortpom-maven-plugin</artifactId>
          <version>3.3.0</version>
          <configuration>
            <createBackupFile>false</createBackupFile>
          </configuration>
        </plugin>
        <plugin>
          <groupId>com.mycila</groupId>
          <artifactId>license-maven-plugin</artifactId>
          <version>4.2</version>
          <configuration>
            <basedir>${basedir}</basedir>
            <quiet>false</quiet>
            <failIfMissing>true</failIfMissing>
            <strictCheck>true</strictCheck>
            <aggregate>true</aggregate>
            <useDefaultExcludes>true</useDefaultExcludes>
            <mapping>
              <java>JAVADOC_STYLE</java>
            </mapping>
            <properties>
              <year>2014</year>
            </properties>
            <encoding>UTF-8</encoding>
            <licenseSets>
              <licenseSet>
                <header>src/etc/header.txt</header>
                <includes>
                  <include>**/*.java</include>
                </includes>
                <excludes>
                  <exclude>target/**</exclude>
                  <exclude>**/pom.xml</exclude>
                  <exclude>bundles/org.jupnp/src/main/java/org/jupnp/util/io/HexBin.java</exclude>
                </excludes>
              </licenseSet>
            </licenseSets>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>check</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.commonjava.maven.plugins</groupId>
        <artifactId>directory-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>directories</id>
            <goals>
              <goal>highest-basedir</goal>
            </goals>
            <phase>initialize</phase>
            <configuration>
              <property>basedirRoot</property>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.github.ekryd.sortpom</groupId>
        <artifactId>sortpom-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>sortpom-verify</id>
            <goals>
              <goal>verify</goal>
            </goals>
            <phase>verify</phase>
            <configuration>
              <verifyFail>Stop</verifyFail>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>release-sign-artifacts</id>
      <activation>
        <property>
          <name>performRelease</name>
          <value>true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <goals>
                  <goal>sign</goal>
                </goals>
                <phase>verify</phase>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
